# rosakasa_core

./: CMakeLists.txt  Makefile  README.md  main.c
demo/: demo.c  demo.h  rendering.c  rendering.h
demo/src/rendering/: rendering.c  rendering.h
docs/: README.md  server-owned-perception.md
include/rosakasa/display/: framebuffer.h
rosakasa/: .gitignore  Makefile  README.md  mix.exs
rosakasa/assets/css/: app.css
rosakasa/assets/js/: app.js
rosakasa/config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
rosakasa/lib/: rosakasa.ex  rosakasa_web.ex
rosakasa/lib/rosakasa/: application.ex  mailer.ex  rendering.ex  repo.ex
rosakasa/lib/rosakasa/rendering/: renderer.ex
rosakasa/lib/rosakasa/rendering/shapes/: shapes.ex
rosakasa/lib/rosakasa_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
rosakasa/lib/rosakasa_web/channels/: engine_channel.ex  user_socket.ex
rosakasa/lib/rosakasa_web/components/: core_components.ex  layouts.ex
rosakasa/lib/rosakasa_web/components/layouts/: root.html.heex
rosakasa/lib/rosakasa_web/controllers/: error_html.ex  error_json.ex  page_controller.ex  page_html.ex
rosakasa/priv/repo/: seeds.exs
rosakasa/test/: test_helper.exs
rosakasa/test/rosakasa_web/controllers/: error_html_test.exs  error_json_test.exs  page_controller_test.exs
rosakasa/test/support/: conn_case.ex  data_case.ex
rosakasa_engine/: CMakeLists.txt  Makefile  README.md
rosakasa_engine/demo/: demo.c  demo.h
rosakasa_engine/demo/src/animations/: animations.c  animations.h
rosakasa_engine/demo/src/rendering/: rendering.c  rendering.h
rosakasa_engine/demo/src/requests/: requests.c  requests.h
rosakasa_engine/demo/src/utils/: utils.c  utils.h
rosakasa_engine/host/pc/: main.c  websocket_client.c  websocket_client.h
rosakasa_engine/include/rosakasa/display/: display.h
rosakasa_engine/src/engine/: engine.c  engine.h
rosakasa_engine/src/engine/display/: display.c
rosakasa_engine/src/engine/http/: http.c  http.h
rosakasa_engine/src/engine/websocket/: websocket.c  websocket.h
rosakasa_server/: .gitignore  README.md  mix.exs
rosakasa_server/lib/: rosakasa_server.ex
rosakasa_server/test/: rosakasa_server_test.exs
src/cartridge/: cartridge.c  cartridge.h  rendering.c  rendering.h
src/demo/: main.c
src/engine/: engine.c  engine.h
src/engine/display/: sdl_display.c
src/host/: pc_main.c
src/platform/sdl/: sdl_display.c
